# zappy-sync

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
zappy/: zappy.py
